Fix: Corrigindo Bugs no Projeto todo
